[project]
name = "chat-project"
version = "0.1.0"
description = "Serveur de chat asynchrone avec WebSockets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "ttkbootstrap>=1.19.2",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
]
[project.scripts]
chat-server = "src.server:main"
